--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,6 @@ steps:
     repository: rdvansloten/deep-cut-bot
     command: 'buildAndPush'
     Dockerfile: 'Dockerfile'
-    tags: 
-    - '$(Build.BuildId)'
-    - 'latest'
+    tags: |
+      '$(Build.BuildId)'
+      'latest'
